remove indirection except for modules boned by Eclipse J19 issue