@@ -32,7 +32,6 @@ import com.salesforce.apollo.stereotomy.mem.MemKeyStore;
 import com.salesforce.apollo.stereotomy.services.grpc.binder.BinderClient;
 import com.salesforce.apollo.stereotomy.services.grpc.binder.BinderServer;
 import com.salesforce.apollo.stereotomy.services.proto.ProtoBinder;
-import com.salesforce.apollo.utils.Utils;
 
 /**
  * @author hal.hildebrand
@@ -67,7 +66,7 @@ public class TestBinder {
         var clientMember = new ControlledIdentifierMember(stereotomy.newIdentifier().get());
 
         var builder = ServerConnectionCache.newBuilder();
-        final var exec = Executors.newFixedThreadPool(3, Utils.virtualThreadFactory());
+        final var exec = Executors.newFixedThreadPool(3, Thread.ofVirtual().factory());
         serverRouter = new LocalServer(prefix, serverMember, exec).router(builder, exec);
         clientRouter = new LocalServer(prefix, clientMember, exec).router(builder, exec);
 
