@@ -34,7 +34,6 @@ import com.salesforce.apollo.stereotomy.mem.MemKeyStore;
 import com.salesforce.apollo.stereotomy.services.grpc.observer.EventObserver;
 import com.salesforce.apollo.stereotomy.services.grpc.observer.EventObserverClient;
 import com.salesforce.apollo.stereotomy.services.grpc.observer.EventObserverServer;
-import com.salesforce.apollo.utils.Utils;
 
 /**
  * @author hal.hildebrand
@@ -69,7 +68,7 @@ public class TestEventObserver {
         var clientMember = new ControlledIdentifierMember(stereotomy.newIdentifier().get());
 
         var builder = ServerConnectionCache.newBuilder();
-        final var exec = Executors.newFixedThreadPool(3, Utils.virtualThreadFactory());
+        final var exec = Executors.newFixedThreadPool(3, Thread.ofVirtual().factory());
         serverRouter = new LocalServer(prefix, serverMember, exec).router(builder, exec);
         clientRouter = new LocalServer(prefix, clientMember, exec).router(builder, exec);
 
