@@ -29,7 +29,6 @@ import com.salesforce.apollo.stereotomy.mem.MemKeyStore;
 import com.salesforce.apollo.stereotomy.services.grpc.validation.EventValidationClient;
 import com.salesforce.apollo.stereotomy.services.grpc.validation.EventValidationServer;
 import com.salesforce.apollo.stereotomy.services.proto.ProtoEventValidation;
-import com.salesforce.apollo.utils.Utils;
 
 /**
  * @author hal.hildebrand
@@ -64,7 +63,7 @@ public class TestEventValidation {
         var clientMember = new ControlledIdentifierMember(stereotomy.newIdentifier().get());
 
         var builder = ServerConnectionCache.newBuilder();
-        final var exec = Executors.newFixedThreadPool(3, Utils.virtualThreadFactory());
+        final var exec = Executors.newFixedThreadPool(3, Thread.ofVirtual().factory());
         serverRouter = new LocalServer(prefix, serverMember, exec).router(builder, exec);
         clientRouter = new LocalServer(prefix, clientMember, exec).router(builder, exec);
 
